idea/testData/kotlinAndJavaChecker/javaAgainstKotlin/UsingCollection.java
package test;

import kt.*;

public class UsingCollection {
    //void f(IStringCollection stringCollection) {
    //    stringCollection.add("asd");
    //    stringCollection.<error descr="Cannot resolve method 'indexOf(java.lang.String)'">indexOf</error>("");
    //    stringCollection.<error descr="Cannot resolve method 'indexOf(int)'">indexOf</error>(3);
    //}
    //
    //void f(CDoubleCollection doubleCollection) {
    //    doubleCollection.add(3);
    //    doubleCollection.add(3.0);
    //    doubleCollection.size();
    //    doubleCollection.getSize();
    //}
    //
    //<error descr="Class 'Extend' must either be declared abstract or implement abstract method 'add(E)' in 'Collection'">public static class Extend extends CDoubleCollection</error> {
    //
    //}
    //
    //public static class Extend2<E> extends MyCollection<E> {
    //
    //}

    public static class Extend3 extends ACollection {

    }

}